[tool.poetry]
name = "wattmeter_sharp"
version = "0.1.0"
description = "シャープの HEMS コントローラ JH-AG01 の内部通信を読み取って，電力センサーの計測値を取得するスクリプトです．"
authors = ["KIMATA Tetsuya <kimata@green-rabbit.net>"]

[tool.poetry.dependencies]
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
docopt = "^0.6.2"
influxdb-client = {extras = ["ciso"], version = "^1.36.1"}
fluent-logger = "^0.11.0"
pyserial = "^3.5"
slack-sdk = "^3.21.3"
python = "^3.10"
zmq = "^0.0.0"

[tool.poetry.group.test.dependencies]
flaky = "^3.7.0"
pytest-cov = "^4.1.0"
pytest-freezegun = "^0.4.2"
pytest-html = "^3.2.0"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "--verbose --cov=app --cov=lib --log-file-level=INFO --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --cov-report=html --html=tests/evidence/index.htm --self-contained-html"

testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_configure_node uses",
    "ignore:The hookimpl CovPlugin.pytest_testnodedown uses",
    "ignore::DeprecationWarning:pytest_freezegun",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "tests/evidence/coverage"

[tool.black]
target-version = ['py310']
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
